2.1/manifests/logoutput-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: docker.io/johnd0es/logoutput:2.1
          ports:
            - containerPort: 3000
