2.1/manifests/pingpong-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: docker.io/johnd0es/pingpong:2.1
          ports:
            - containerPort: 3000
