2.1/manifests/logoutput-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  selector:
    app: logoutput
  ports:
    - port: 3000
      targetPort: 3000
