2.1/manifests/pingpong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  selector:
    app: pingpong
  ports:
    - port: 3000
      targetPort: 3000
